  * Update watch file.
  * Point Vcs-* to experimental.

  [ Jeremy Bicha ]
  * debian/control.in:
    - Build-Depend on libvulkan-dev and sassc
    - Have libgtk-4-bin and libgtk-4-common and gtk-4-examples depend on
      their gtk3 counterparts until we figure out how to handle the file
      conflicts there. The conflicted files have not changed in gtk4.
      See GNOME bug 774912.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 11 Sep 2017 23:33:08 +0200

gtk+3.0 (3.22.21-1) unstable; urgency=medium

  * New upstream release.
  * Bump to debhelper compat 10.
    + Drop dh-autoreconf and autotools-dev build-deps, no longer needed as
      debhelper guarantees them now.
  * Switch from CDBS to dh.
    Only regression is that we don't run --fail-missing on arch:all builds.
  * Don't build the docs when not building the -doc packages. Saves some
    time on arch-only builds.
  * Skip the udeb build when not building the -udeb package. Saves a lot
    of time on the arch:all builds.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 12 Sep 2017 00:38:15 +0200

gtk+3.0 (3.22.20-1) unstable; urgency=medium

  * New upstream release.
  * debian/patches/fix-gtk-menu-sliders.patch:
    + Removed, applied upstream.
  * Bump Standards-Version to 4.1.0; no changes needed.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 09 Sep 2017 15:11:12 +0200

gtk+3.0 (3.22.19-1) unstable; urgency=medium

  [ Jeremy Bicha ]
  * New upstream release
  * debian/libgtk-3-common.install.in:
    Install EmojiChooser gsettings schemas
  * Add fix-gtk-menu-sliders.patch:
    - Cherry-pick patch to fix regression with clicking on sliders in menus,
      such as with Unity's sound indicator (LP: #1712701) (Closes: #872687)

  [ Ken VanDine ]
  * debian/control.in:
    - Bump libpango1.0-dev Build-Depends to >= 1.40.5 for colornames test

 -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 28 Aug 2017 20:39:28 -0400

gtk+3.0 (3.22.18-1) unstable; urgency=medium

  * Hi from Debconf